# wechat-cli

./: .gitignore  @AutomationLog.txt  LICENSE  README.md  agent_example.py  agent_openai.py  find_wx.py  install.bat  patch_bridge.py  pyproject.toml  requirements.txt  test_send.py
.github/workflows/: release.yml
scripts/: install.ps1
skills/wechat-cli-installer/: SKILL.md
skills/wechat-cli-installer/agents/: openai.yaml
tests/: test_cli_rendering.py  test_hakimi_bridge.py  test_native_ui.py  test_weflow_runtime.py
wechat_cli/: __init__.py  agent_bridge.py  cli.py  config.py  db_reader.py  diagnostics.py  easychat_client.py  hakimi_stream.py  key_extractor.py  models.py  native_db.py  native_ui.py  server.py  webui.py  weflow_client.py  weflow_runtime.py
wechat_cli/webui_assets/: index.html
